fix additionalDeliminator attribute

Summary:
The initialization of the `Rule::m_wordDelimiter` cache was done before the delimiters were extracted, which can invalidate the character number.

BUG: 399348

Reviewers: #framework_syntax_highlighting, dhaumann, cullmann

Reviewed By: #framework_syntax_highlighting, cullmann

Subscribers: kwrite-devel, kde-frameworks-devel

Tags: #kate, #frameworks

Differential Revision: https://phabricator.kde.org/D23134